appId: com.novagen.veteransfirst
env:
  PHONE: '2015550100'
---
- runFlow: reset-app.yaml
- tapOn:
    text: 'Get started'
    optional: true
- tapOn:
    text: 'I already have an account'
    optional: true
- tapOn:
    id: 'phone-input'
    optional: true
- inputText: ${PHONE}
- tapOn:
    text: 'Send verification code'
    optional: true
- tapOn:
    text: 'Continue'
    optional: true
- inputText: '424242'
- extendedWaitUntil:
    visible:
      text: 'Book a ride'
    timeout: 20000
